--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.11.0",
+    "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "D": "^1.0.0",
+    "apollo-upload-client": "^14.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "1.1.4",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server/index.js",
+    "webpack": "node_modules/.bin/webpack -w",
+    "wds": "webpack-dev-server"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +38,42 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server": "^2.17.0",
+    "babel-loader": "^8.1.0",
+    "bcryptjs": "^2.4.3",
+    "css-loader": "^4.2.2",
+    "eslint": "^7.7.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
+    "final-form": "^4.20.1",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "mongoose": "^5.10.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
+    "react-apollo": "^3.1.5",
+    "react-countdown": "^2.2.1",
+    "react-final-form": "^6.5.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^5.2.0",
+    "rebass": "^4.0.7",
+    "use-places-autocomplete": "^1.3.10",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
