--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/node": "^7.12.1",
     "@reach/combobox": "^0.11.0",
     "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,17 +11,22 @@
     "@testing-library/user-event": "^7.1.2",
     "D": "^1.0.0",
     "apollo-upload-client": "^14.1.2",
+    "cherio": "^1.0.0-rc.2",
     "cloudinary": "^1.23.0",
     "d": "^1.0.1",
+    "puppeteer": "^5.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "1.1.4",
     "react-slideshow-image": "^3.3.0",
+    "slugify": "^1.4.6",
     "styled-components": "^5.1.1",
+    "transliteration": "^2.2.0",
     "uuid": "^8.3.1",
     "websocket.io": "^0.2.1"
   },
   "scripts": {
+    "parser": "nodemon server/parser/index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,7 +52,7 @@
   },
   "devDependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@material-ui/core": "^4.11.0",
@@ -62,6 +68,7 @@
     "eslint": "^7.7.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
+    "file-loader": "^6.2.0",
     "final-form": "^4.20.1",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
