--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-logger": "^2.0.0",
     "apollo-server": "^2.17.0",
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
@@ -74,6 +75,7 @@
     "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^5.10.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
@@ -84,8 +86,9 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "rebass": "^4.0.7",
+    "resolve-cwd": "^3.0.0",
     "use-places-autocomplete": "^1.3.10",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
