--- a/package.json
+++ b/package.json
@@ -83,8 +83,10 @@
     "react-final-form": "^6.5.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
+    "react-router-modal": "^1.5.2",
     "rebass": "^4.0.7",
     "resolve-cwd": "^3.0.0",
+    "supercluster": "^7.1.0",
     "use-places-autocomplete": "^1.3.10",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
