--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/node": "^7.12.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/combobox": "^0.11.0",
     "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
