--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apollo-upload-client": "^14.1.2",
+    "apollo-upload-client": "^14.1.3",
     "cherio": "^1.0.0-rc.2",
     "cloudinary": "^1.23.0",
     "puppeteer": "^5.4.1",
@@ -81,7 +81,9 @@
     "prop-types": "^15.7.2",
     "react-apollo": "^3.1.5",
     "react-countdown": "^2.2.1",
+    "react-dropzone": "^11.2.4",
     "react-final-form": "^6.5.1",
+    "react-modal-image": "^2.5.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-router-modal": "^1.5.2",
