--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-upload-client": "^14.1.3",
     "cherio": "^1.0.0-rc.2",
     "cloudinary": "^1.23.0",
+    "dotenv": "^8.2.0",
     "puppeteer": "^5.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
