--- a/app.yaml
+++ b/app.yaml
@@ -7,3 +7,15 @@ resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
+
+handlers:
+  - url: /static
+    static_dir: build/static
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: build/index.html
+    upload: build/index.html
