--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eject": "react-scripts eject",
     "server": "nodemon server/index.js",
     "webpack": "node_modules/.bin/webpack -w",
-    "wds": "webpack-dev-server"
+    "wds": "webpack-dev-server",
+    "webTest": "webpack serve --open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,11 +49,19 @@
       "last 1 safari version"
     ]
   },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
+  },
   "devDependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.12.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "apollo-cache-inmemory": "^1.6.6",
@@ -62,6 +71,7 @@
     "apollo-link-logger": "^2.0.0",
     "apollo-server": "^2.17.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-imports": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "css-loader": "^4.2.2",
     "eslint": "^7.7.0",
@@ -91,6 +101,7 @@
     "supercluster": "^7.1.0",
     "use-places-autocomplete": "^1.3.10",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
