--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,11 @@
 runtime: nodejs
 env: flex
 
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
-
 handlers:
-  - url: /
-    static_files: build/index.html
-    upload: build/index.html
-  - url: /(.*)$
-    static_files: build/\1
-    upload: build/(.*)
+ - url: /
+   static_files: build/index.html
+   upload: build/index.html
+
+ - url: /(.*)
+   static_files: build/\1
+   upload: build/(.*)
