--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,6 @@
-runtime: nodejs
+runtime: python27
+api_version: 1
+threadsafe: true
 env: flex
 
 manual_scaling:
@@ -9,10 +11,8 @@ resources:
   disk_size_gb: 10
 
 handlers:
- - url: /
-   static_files: build/index.html
-   upload: build/index.html
-
- - url: /(.*)
-   static_files: build/\1
-   upload: build/(.*)
+- url: /
+  static_files: build/index.html
+  upload: build/index.html
+- url: /
+  static_dir: build
