--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,12 @@ runtime: python27
 api_version: 1
 threadsafe: true
 skip_files:
-  /node_modules
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.js[co]$
+- ^(.*/)?.*\.jsx[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
 
 manual_scaling:
   instances: 1
