--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,6 @@
 runtime: nodejs12
+network:
+  session_affinity: true
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
