--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,8 @@
 runtime: nodejs12
 network:
+  forwarded_ports:
+  - 65080
+  instance_tag: websocket
   session_affinity: true
 handlers:
   # Serve all static files with url ending with a file extension
