--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,14 @@
-runtime: nodejs12
+runtime: nodejs
+env: flex
 network:
   forwarded_ports:
   - 65080
   instance_tag: websocket
   session_affinity: true
 handlers:
-  # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
     static_files: build/\1
     upload: build/(.*\..+)$
-  # Catch all handler to index.html
   - url: /.*
     static_files: build/index.html
     upload: build/index.htm
