--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,11 @@
 runtime: nodejs
 env: flex
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
 env_variables:
   NODE_ENV: production
 network:
@@ -8,15 +14,19 @@ network:
   instance_tag: websocket
   session_affinity: true
 handlers:
-  - url: /(.*\..+)$
+  - url: /static
+    static_dir: build/static
+  - url: /(.*\.(json|ico|js))$
     static_files: build/\1
-    upload: build/(.*\..+)$
-  - url: /.*
+    upload: build/.*\.(json|ico|js)$
+  - url: .*
     static_files: build/index.html
-    upload: build/index.htm
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+    upload: build/index.html
+
+# handlers:
+#   - url: /(.*\..+)$
+#     static_files: build/\1
+#     upload: build/(.*\..+)$
+#   - url: /.*
+#     static_files: build/index.html
+#     upload: build/index.htm
