--- a/package.json
+++ b/package.json
@@ -23,39 +23,7 @@
     "styled-components": "^5.1.1",
     "transliteration": "^2.2.0",
     "uuid": "^8.3.1",
-    "websocket.io": "^0.2.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server/index.js",
-    "webpack": "node_modules/.bin/webpack -w",
-    "wds": "webpack-dev-server",
-    "webTest": "webpack serve --open"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "@babel/env",
-      "@babel/react"
-    ]
-  },
-  "devDependencies": {
+    "websocket.io": "^0.2.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.11.0",
@@ -98,7 +66,42 @@
     "rebass": "^4.0.7",
     "resolve-cwd": "^3.0.0",
     "supercluster": "^7.1.0",
-    "use-places-autocomplete": "^1.3.10",
+    "use-places-autocomplete": "^1.3.10"
+  },
+  "engines": {
+    "node": ">=8.10"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server": "nodemon server/index.js",
+    "webpack": "node_modules/.bin/webpack -w",
+    "wds": "webpack-dev-server",
+    "webTest": "webpack serve --open"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
+  },
+  "devDependencies": {
     "webpack": "^5.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
