--- a/app.yaml
+++ b/app.yaml
@@ -13,20 +13,20 @@ network:
   - 65080
   instance_tag: websocket
   session_affinity: true
-handlers:
-  - url: /static
-    static_dir: build/static
-  - url: /(.*\.(json|ico|js))$
-    static_files: build/\1
-    upload: build/.*\.(json|ico|js)$
-  - url: .*
-    static_files: build/index.html
-    upload: build/index.html
-
 # handlers:
-#   - url: /(.*\..+)$
+#   - url: /static
+#     static_dir: build/static
+#   - url: /(.*\.(json|ico|js))$
 #     static_files: build/\1
-#     upload: build/(.*\..+)$
-#   - url: /.*
+#     upload: build/.*\.(json|ico|js)$
+#   - url: .*
 #     static_files: build/index.html
-#     upload: build/index.htm
+#     upload: build/index.html
+
+handlers:
+  - url: /(.*\..+)$
+    static_files: build/\1
+    upload: build/(.*\..+)$
+  - url: /.*
+    static_files: build/index.html
+    upload: build/index.htm
