--- a/app.yaml
+++ b/app.yaml
@@ -23,10 +23,10 @@ network:
 #     static_files: build/index.html
 #     upload: build/index.html
 
-handlers:
-  - url: /(.*\..+)$
-    static_files: build/\1
-    upload: build/(.*\..+)$
-  - url: /.*
-    static_files: build/index.html
-    upload: build/index.htm
+# handlers:
+#   - url: /(.*\..+)$
+#     static_files: build/\1
+#     upload: build/(.*\..+)$
+#   - url: /.*
+#     static_files: build/index.html
+#     upload: build/index.htm
