--- a/app.yaml
+++ b/app.yaml
@@ -13,20 +13,12 @@ network:
   - 65080
   instance_tag: websocket
   session_affinity: true
-# handlers:
-#   - url: /static
-#     static_dir: build/static
-#   - url: /(.*\.(json|ico|js))$
-#     static_files: build/\1
-#     upload: build/.*\.(json|ico|js)$
-#   - url: .*
-#     static_files: build/index.html
-#     upload: build/index.html
-
-# handlers:
-#   - url: /(.*\..+)$
-#     static_files: build/\1
-#     upload: build/(.*\..+)$
-#   - url: /.*
-#     static_files: build/index.html
-#     upload: build/index.htm
+handlers:
+  - url: /static
+    static_dir: static
+  # Serve all static files with url ending with a file extension
+  - url: /(.*\..+)$
+    static_files: build/\1
+    upload: build/(.*\..+)$
+  - url: /.*
+    script: auto
