--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "node": ">=8.10"
   },
   "scripts": {
-    "start": "serve -s build",
-    "local": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
