--- a/package.json
+++ b/package.json
@@ -4,43 +4,34 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "@babel/node": "^7.12.1",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@reach/combobox": "^0.11.0",
-    "@react-google-maps/api": "^1.9.12",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "apollo-upload-client": "^14.1.3",
-    "cherio": "^1.0.0-rc.2",
-    "cloudinary": "^1.23.0",
-    "dotenv": "^8.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "1.1.4",
-    "react-slideshow-image": "^3.3.0",
-    "slugify": "^1.4.6",
-    "styled-components": "^5.1.1",
-    "transliteration": "^2.2.0",
-    "uuid": "^8.3.1",
-    "websocket.io": "^0.2.1",
     "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.12.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@reach/combobox": "^0.11.0",
+    "@react-google-maps/api": "^1.9.12",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "apollo-link-logger": "^2.0.0",
     "apollo-server": "^2.17.0",
+    "apollo-upload-client": "^14.1.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "cherio": "^1.0.0-rc.2",
+    "cloudinary": "^1.23.0",
     "css-loader": "^4.2.2",
+    "dotenv": "^8.2.0",
     "eslint": "^7.7.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
@@ -55,24 +46,35 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-countdown": "^2.2.1",
+    "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
     "react-final-form": "^6.5.1",
     "react-modal-image": "^2.5.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-router-modal": "^1.5.2",
+    "react-scripts": "1.1.4",
+    "react-slideshow-image": "^3.3.0",
     "rebass": "^4.0.7",
     "resolve-cwd": "^3.0.0",
+    "serve": "^11.3.2",
+    "slugify": "^1.4.6",
+    "styled-components": "^5.1.1",
     "supercluster": "^7.1.0",
-    "use-places-autocomplete": "^1.3.10"
+    "transliteration": "^2.2.0",
+    "use-places-autocomplete": "^1.3.10",
+    "uuid": "^8.3.1",
+    "websocket.io": "^0.2.1"
   },
   "engines": {
     "node": ">=8.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " serve -s build",
+    "local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
