--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "final-form": "^4.20.1",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
+    "i18next": "^19.8.9",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "merge-graphql-schemas": "^1.7.8",
@@ -52,6 +55,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
     "react-final-form": "^6.5.1",
+    "react-i18next": "^11.8.7",
     "react-modal-image": "^2.5.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
