--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^5.10.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.1.2",
+    "prettier": "2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
