--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/combobox": "^0.11.0",
     "@react-google-maps/api": "^1.9.12",
+    "@rebass/preset": "^4.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -31,7 +32,7 @@
     "cherio": "^1.0.0-rc.2",
     "cloudinary": "^1.23.0",
     "css-loader": "^4.2.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.7.0",
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
@@ -64,6 +65,7 @@
     "react-slideshow-image": "^3.3.0",
     "rebass": "^4.0.7",
     "resolve-cwd": "^3.0.0",
+    "sass": "^1.35.2",
     "serve": "^11.3.2",
     "slugify": "^1.4.6",
     "styled-components": "^5.1.1",
@@ -106,6 +108,11 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "4.5.3",
+    "sass-loader": "7.2.0",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^2.0.0",
+    "styles-loader": "^3.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
